fix: fixed responsiveness on mobile

--- a/custom/css/styles.css
+++ b/custom/css/styles.css
@@ -100,8 +100,17 @@ a:hover {
         padding-right: 1%;
     }
     .nav__bar{
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .nav_items > li{
+        border-bottom: 0.5px solid #f0f0f273;
+        padding-bottom: 5px;
+        padding-top: 5px;
+    }
+    .nav_items > li:hover{
+        transform: translateX(1px);
+        transition: 300ms ease-in-out;
     }
     
 }
@@ -113,9 +122,20 @@ a:hover {
         padding-right: 1%;
     }
     .nav__bar{
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
+    .nav_items > li{
+        border-bottom: 0.5px solid #f0f0f273;
+        padding-bottom: 5px;
+        padding-top: 5px;
+    }
+    .nav_items > li:hover{
+        transform: translateX(5px);
+        transition: 300ms ease-in-out;
+    }
+    
+}
     
 .header-sub-text{
     background-color: #dedede;
